--- a/.github/workflows/fish.yml
+++ b/.github/workflows/fish.yml
@@ -8,9 +8,11 @@ on:
 
 jobs:
   linting:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v3
+    - name: Upgrade Runner
+      run: sudo apt-get update && sudo apt-get upgrade
     - name: Install Fish
       run: sudo apt install fish
     - name: Lint
