Cleanup, add install target, implement exec and enter

--- a/.github/workflows/fish.yml
+++ b/.github/workflows/fish.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   linting:
+    # tfw 'ubuntu-latest' is not, in fact, the latest version of ubuntu
     runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v3
