--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ toml = "0.8.19"
 
 # Other
 seahash = "4.1.0"
-walkdir = "2.5.0"
+petgraph = "0.7.0"
+comfy-table = "7.1.3"
 
 [[bin]]
 name = "bx"
