--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ lto           = true
 clap = { version = "4.5.23", features = ["derive"] }
 nucleo-matcher = "0.3.1"
 dialoguer = "0.11.0"
+comfy-table = "7.1.3"
+colored = "3.0.0"
 
 # Logging and error reporting
 color-eyre = "0.6.3"
@@ -31,7 +33,7 @@ toml = "0.8.19"
 # Other
 seahash = "4.1.0"
 petgraph = "0.7.0"
-comfy-table = "7.1.3"
+uzers = "0.12.1"
 
 [[bin]]
 name = "bx"
